# AI-Study-Buddy

./: .dockerignore  PLAN.md  docker-compose.yml  docker.ignore  pyproject.toml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  main.py  normalize_glyphs.py  pyproject.toml  requirements-worker.txt  s3_utils.py  simple_capture.html  simple_render.py  test.py  vector.py  worker.py
backend/characters/: H.json  H_normalized.json
backend/chroma_langchain_db/: chroma.sqlite3
backend/data/: Field_Assignment_2.docx
backend/process_documents/: __init__.py  pdf_processor.py  word_processor.py
backend/scripts/: nba_scraper.py
data/temp_json/: frame_detections.json
frontend/: .dockerignore
frontend/app/: layout.tsx  page.tsx
frontend/app/healthz/: route.ts
runs/detect/train/: args.yaml  results.csv
yolo/: detect_frames.py  download_dataset.py  extract_frames.py  jobs.py  track_object.py  train_model.py
yolo/SurgiTrack-1/: README.dataset.txt  README.roboflow.txt  data.yaml
yolo/SurgiTrack-1/train/: labels.cache
yolo/SurgiTrack-1/train/labels/: frame_0_jpg.rf.0b4e20a5e04196cb733c26cfe8b3bae7.txt  frame_0_jpg.rf.6f7600299037c72270586dd6329088ef.txt  frame_0_jpg.rf.e875f130145e657a246932706f114245.txt  frame_10_jpg.rf.2696f82aa51a06801617042c36b407d6.txt  frame_10_jpg.rf.279066350a85f08082f1328700bd66d6.txt  frame_10_jpg.rf.a7da9a18cc75a479e84f8d116e0f4287.txt  frame_11_jpg.rf.17bbb9d93926520d2719d1ef996f77cd.txt  frame_11_jpg.rf.7d996fec3c3728498556bf61899f8233.txt  frame_11_jpg.rf.d5d4860a7af60e0372a37ccf46c2e4dc.txt  frame_130_jpg.rf.272b5b3c89f5a94039a620e218aed00a.txt  frame_130_jpg.rf.743d7eed697602599b24478b1328a45e.txt  frame_130_jpg.rf.8dd3c69c35183b7f5b7658e88ab75a1f.txt  frame_131_jpg.rf.37c42d7b3d1478b53e79b43ecdba2709.txt  frame_131_jpg.rf.a22d34041fa3b555ff2ca712ea90226b.txt  frame_131_jpg.rf.e801f4fc672b0638cb70f9e38f0f2143.txt  frame_133_jpg.rf.148b77f3a8c090f9d9cc8dd175eab0d0.txt  frame_133_jpg.rf.15419c84d7e2e37d6d498a970adedca8.txt  frame_133_jpg.rf.2f6de989aaefc1974ed6626e19daa341.txt  frame_135_jpg.rf.723c8d9253a48f3f1684ade66889a8f0.txt  frame_135_jpg.rf.bc36e04b1887ef19eb2c3c40718ceba9.txt  frame_135_jpg.rf.d8dfd505cde051cb92f21aeea08fe6e8.txt  frame_136_jpg.rf.5157de00af3ce0cf8c34f34ea2b5737b.txt  frame_136_jpg.rf.74bf2c69304a5763842feb05d89de80f.txt  frame_136_jpg.rf.e2fecccd7167d07646f31945338688b3.txt  frame_137_jpg.rf.2a586190f96cef041e6e011a1642b247.txt  frame_137_jpg.rf.8250955cd7fae6d565b4b87dff9de115.txt  frame_137_jpg.rf.ed1879a78e8e69be275ae2e0943a51fa.txt  frame_138_jpg.rf.0955a3da991b6b09a5f928fd7d111e21.txt  (+58 more)
yolo/SurgiTrack-1/valid/: labels.cache
(+7 files in other folders)
