[project]
name = "surgitrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    "boto3>=1.39.15",
    "upstash-redis>=1.4.0",
    "requests>=2.32.4",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
]
