[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.0",
    "langchain>=0.3.26",
    "ollama>=0.5.1",
    "openai>=1.94.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "spotipy>=2.25.1",
    "uvicorn[standard]>=0.35.0",
]
